<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.AlarmActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/daily_reminder"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <ImageButton
            android:id="@+id/btn_repeating_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_time_black" />

        <TextView
            android:id="@+id/tv_repeating_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/btn_set_repeating_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/set_repeating_alarm" />
    </LinearLayout>
</LinearLayout>