<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.manual.ManualTransactionActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/add_transaction_manual"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_add_number"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/hint_nominal"
        android:inputType="number"
        android:textSize="60sp"
        app:boxStrokeColor="@color/info1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_down"
        android:contentDescription="@string/drop_down_type"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_type"
        app:layout_constraintEnd_toEndOf="@id/spinner_type"
        app:layout_constraintTop_toTopOf="@id/spinner_type"
        app:tint="@color/info1" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_spinner"
        android:padding="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_add_number" />

    <ImageView
        android:id="@+id/ic_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_down"
        android:visibility="gone"
        android:contentDescription="@string/drop_down_category"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_category"
        app:layout_constraintEnd_toEndOf="@id/spinner_category"
        app:layout_constraintTop_toTopOf="@id/spinner_category"
        app:tint="@color/info1" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_spinner"
        android:padding="8dp"
        android:visibility="gone"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_type" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_spinner"
        android:ems="10"
        android:hint="@string/product_name"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/nunito_sans_bold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/add_transaction"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_add_circle"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_product_name" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>